# VisualFeatureSearch

./: .gitignore  Interactive_Visual_Feature_Search_(interactive_article).ipynb  Interactive_Visual_Feature_Search_Basic_Demo.ipynb  Interactive_Visual_Feature_Search_Out_of_Domain.ipynb  LICENSE  README.md  caching.py  database.py  hog.py  projdemo.ipynb  pyproject.toml  requirements.txt  searchtool.py  util.py  widgets.py
PySvelte/src/: Highlight.svelte
notebooks/: (2022) Interactive_Visual_Feature_Search_Interactive_Article.ipynb  Interactive_Visual_Feature_Search_Basic_Demo.ipynb  Interactive_Visual_Feature_Search_Caching_COCO.ipynb  Interactive_Visual_Feature_Search_Chest_Xray_Demo.ipynb  Interactive_Visual_Feature_Search_Interactive_Article.ipynb  Interactive_Visual_Feature_Search_No_Cache_Demo.ipynb  Interactive_Visual_Feature_Search_Out_of_Domain.ipynb  Interactive_Visual_Feature_Search_WILDS_Demo.ipynb
src/: Highlight.svelte  MultiHighlight.svelte
src/shared_utils/: notebook_callback.js
vissearch/: caching.py  database.py  searchtool.py  util.py  widgets.py
visualfeaturesearch/: __init__.py  caching.py  data.py  searchtool.py  util.py
