[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visualfeaturesearch"]

[project]
name = "visualfeaturesearch"
version = "1.0.0"
dependencies = [
  "numpy",
  "Pillow",
  "opencv-python",
  "torch",
  "torchvision",
  "zarr",
]
requires-python = ">= 3.8"
authors = [
  {name = "Devon Ulrich"},
  {name = "Ruth Fong"},
]
maintainers = [
  {name = "Devon Ulrich", email = "dulrich000@gmail.com"},
]
description = "A lightweight, interactive tool for interpreting any CNN"
readme = "README.md"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
]

[project.urls]
Homepage = "https://github.com/lookingglasslab/VisualFeatureSearch"